crates/oxc_css_parser/tests/error/value/calc/hash.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: component value is expected
  ┌─ hash.css:1:12
  │
1 │ a {b: calc(#)}
  │            ^


